# moira

./: .gitignore  .rconf  00README  BUILDING.debathena  Makefile.in  README  README.md  VERSION  aclocal.m4  configure  configure.in  libtool  mkinstalldirs  moira-4.0.0.1.0.tar.gz.delta  moira-4.0.0.1.0.tar.gz.id  moira-4.0.0.2.tar.gz.delta  moira-4.0.0.2.tar.gz.id  moira-4.0.0.3+51+g65d55c5.tar.gz.delta  moira-4.0.0.3+51+g65d55c5.tar.gz.id  moira-4.0.0.3+70+g36ab6660.tar.gz.delta  moira-4.0.0.3+70+g36ab6660.tar.gz.id  moira-4.2.4.0.tar.gz.delta  moira-4.2.4.0.tar.gz.id
moira/: Imakefile  Makefile  Makefile.in  README  configure  configure.in  libtool  patchlevel.h
moira/afssync/: INSTRUCTIONS  Imakefile  Makefile  Makefile.in  migrate.qc  prnewlist.c  prnewuser.c  pt_util-fast.c  pt_util.c  ptdump.c  ptprocs.c  ptserver.h  ptutils.c  resync.qc  script.pl  sync.dc  sync.fast.qc  sync.pc  sync.qc  ubik.c  utils.c
moira/backup/: Imakefile  Makefile  Makefile.in  copy_backups.c  db2bkup.awk  db2rest.awk  dump_db.dc  dump_db.h  dump_db.pc  dump_db.qc  dumprest.dc  dumprest.pc  dumprest.qc  esqlc_fix.pl  nightly.sh  report.pl  report.sh  rest_db.dc  rest_db.pc  rest_db.qc  restore_from_backup
moira/clients/: Imakefile  Makefile  Makefile.in
moira/clients/addusr/: Imakefile  Makefile.in  addusr.c
moira/clients/bella/: Makefile.in  bella.c
moira/clients/blanche/: Imakefile  Makefile  Makefile.in  blanche.c
moira/clients/chfn/: Makefile.in  chfn.c
moira/clients/chpobox/: Makefile.in  chpobox.c
moira/clients/chsh/: Makefile.in  chsh.c
moira/clients/cluster/: AriRegAll.c  Cluster  Imakefile  MList.c  MList.h  MListP.h  MriRegAll.c  cluster.c
moira/clients/eunice/: Makefile.in  eunice.c
moira/clients/lib/: Makefile.in  error.c  machine.c  mail.c  member.c  mrclient-internal.h  pobox.c  utils.c
moira/clients/mailmaint/: Imakefile  Makefile  Makefile.in  mailmaint.c
moira/clients/mitch/: Makefile.in  mitch.c
moira/clients/mmoira/: BUGS  Imakefile  Makefile  Moira  data.h  display.c  form_setup.c  forms.awk  forms.txt  formup.c  help.c  helpfile  main.c  menus.awk  menus.txt  mmoira.h  moira_cb.c  parser.c  parser.h  queries.c  stubs.c  tty.c
moira/clients/moira/: Imakefile  Makefile  Makefile.in  TODO  acl.c  attach.c  cluster.c  dcmmaint.c  defs.h  delete.c  f_defs.h  globals.c  globals.h  lists.c  main.c  menu.c  menu.h  menus.c  misc.c  namespace.c  nfs.c  pobox.c  printer.c  quota.c  user.c  utils.c  zephyr.c
moira/clients/mrcheck/: Imakefile  Makefile  Makefile.in  (+1 more)
moira/db/: Imakefile  Makefile  Makefile.in  README  class.qc  conv.qc  data.qc  db2tbls.awk  db2tbls_sql.awk  dbopt  dbopt.after  dbopt.sql  doschema.awk  imembers.qc  match.qc  newdb  newmoira.dc  newmoira.qc  renamedb  report.sh  schema  schema.sql  unschema.sql
moira/dbck/: FIXES  Imakefile  Makefile  Makefile.in  dbck.dc  dbck.h  dbck.pc  dbck.qc  fix.dc  fix.pc  fix.qc  members.dc  members.pc  members.qc  nhash.c  phase1.dc  phase1.pc  phase1.qc  phase2.dc  phase2.pc  phase2.qc  phase3.dc  phase3.pc  phase3.qc  phase4.dc  phase4.pc  phase4.qc
moira/dcm/: Imakefile  Makefile  Makefile.in  dcm.c  dcm.pc  startdcm.c  utils.c
moira/gdb/: Imakefile  Makefile  README  gdb.c  gdb.mss  gdb.prob  gdb_conn.c  gdb_db.c  gdb_debug.c  gdb_fserv.c  gdb_lib.h  gdb_ops.c  gdb_serv.c  gdb_struct.c  gdb_stype.c  gdb_trans.c  gdb_trans2.c  gdb_ugd.mss  gdb_version  library.mss  samp1.c  samp1a.c  slides.mss  tcl.c  tdbcl.c  test.c  tfsr.c  tsr.c  tst.c
moira/include/: Imakefile  Makefile  Makefile.in  admin_server.h  com_err.h  dcm.h  des.h  gdb.h  kadm.h  krb.h  mit-copyright.h  moira.h  moira_site.h  mr_krb.h  mr_proto.h  mrclient.h  prot.h  update.h  ureg_proto.h
moira/incremental/: Imakefile  Makefile  Makefile.in  afs.c  afs_create.pl  afs_nightly.pl  afs_quota.pl  afs_rename.pl  afs_utils.pl  ksrvtgt.c
moira/lib/: Imakefile  Makefile  Makefile.in  README  critical.c  fixhost.c  fixname.c  gdss_convert.c  gdss_et.et  hash.c  idno.c  kname_parse.c  kname_unparse.c  krb_et.et  mr_access.c  mr_auth.c  mr_call.c  mr_connect.c  mr_data.c  mr_et.et  mr_init.c  mr_ops.c  mr_param.c  mr_private.h  mr_query.c  nfsparttype.c  sq.c  strs.c  ureg_err.et
moira/man/: Imakefile  Makefile  Makefile.in  addusr.1  bella.1  blanche.1  chfn.1  chpobox.1  chsh.1  dcm.8  dcmmaint.1  eunice.1  mailmaint.1  mitch.1  moira.1  moira.3  moirad.8  mrcheck.1  mrtest.8  reg_svr.8  setquota.8  stanley.1  startmoira.8  startreg.8  stella.1  update_server.8  usermaint.1  userreg.1
moira/reg_svr/: Imakefile  Makefile  Makefile.in  admin_call.c  admin_err.et  errors  genkey.c  genwords.c  genwords.pc  kerberos.c  protocol.c  reg_svr.c  reg_svr.h  reg_svr.pc  requests.c  startreg.c  unreg_user.qc  words.c
moira/regtape/: Imakefile  Makefile  Makefile.in  affiliates.pl  common.h  common.pc  empconv.qc  employee.dc  employee.pc  grade20-extract.pl  grouper.pl  mail_header  nodups.qc  personel.input  rafnu.c  reg-token.py  reg-update  registrar.input  resign.qc  sign.dc  sign.pc  staff.pc  staff.sql  stellar.pl  stuconv.qc  student.pc  student.sql  students.dc  students.pc  uidfix.qc  verify.dc  verify.pc  vote.dc  vote.pc
moira/server/: Imakefile  Makefile  Makefile.in  TODO  cache.dc  cache.pc  cache.qc  increment.dc  increment.pc  increment.qc  malloc.h  meinitlst.c  mr_glue.c  mr_main.c  mr_sauth.c  mr_sbrk.c  mr_scall.c  mr_server.h  mr_shutdown.c  mr_smalloc.c  mr_srvdata.c  mr_util.c  qaccess.dc  qaccess.pc  qfollow.dc  qfollow.pc  qoldsup.qc  qrtn.dc  qrtn.h  qrtn.pc  qrtn.qc  qsetup.dc  qsetup.pc  qsubs.c  qsupport.dc  qsupport.pc  qsupport.qc  queries2.c  query.h  qvalidate.c  (+4 more)
moira/update/: Imakefile  Makefile  Makefile.in  auth_001.c  auth_002.c  auth_003.c  checksum.c  client.c  config.c  exec_002.c  get_file.c  hostname.c  inst_001.c  log.c  moira.conf  send_file.c  sendrecv.c  sms_untar.c  smskey.c  ticket.c  update_server.c  update_server.h  update_test.c  xfer_002.c  xfer_003.c
moira/util/: Imakefile  makeconfig
moira/webmoira/: Makefile.in  Makefile.linux  Makefile.sparc  index.jhtml  moirai.c
(+582 files in other folders)
